# VoiceClone

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
agent_docs/: antipatterns.md  architecture.md  code_conventions.md  logging.md  project_status.md  testing.md  troubleshooting.md  verification_metrics.md  workflow.md
audios/: README.md
docs/: DESPLIEGUE.md
docs/diagrams/: arquitectura.md
docs/notebooks/: README.md
docs/plannings/planning_01_2026-06-20_setup-voiceclone/: 00_PLANNING_SETUP.md
docs/plannings/planning_02_2026-06-20_calidad-y-familia/: 00_PLANNING.md
docs/plannings/planning_03_2026-06-20_etica-duelo-guardrails/: 00_PLANNING.md
docs/prompts/: README.md
docs/sprints/sprint_01_2026-06-20_clonado-ivc-tts/: 01_RESUMEN_SPRINT.md
docs/sprints/sprint_02_2026-06-20_calidad-y-familia/: 01_RESUMEN_SPRINT.md
docs/sprints/sprint_03_2026-06-20_etica-y-guardrails/: 01_RESUMEN_SPRINT.md
docs/templates/: TEMPLATE_AUDITORIA_SDD.md  TEMPLATE_GATE_PHASE.md  TEMPLATE_SDD_SPEC.md  TEMPLATE_SPRINT_RESUMEN.md
docs/validate/: AUDIT_01_2026-06-20_GATE_F1_CORE.md  AUDIT_02_2026-06-20_GATE_F2_CALIDAD_UI.md  AUDIT_03_2026-06-20_GATE_F3_ETICA_GUARDRAILS.md  README.md
output/: .gitkeep
scripts/: 01_verificar_conexion.py  02_clonar_voz.py  03_generar_voz.py  04_conversar.py  05_calibrar_voz.py  06_app_familia.py
src/voiceclone/: __init__.py
src/voiceclone/cli/: __init__.py  console.py  main.py
src/voiceclone/config/: __init__.py  settings.py
src/voiceclone/domain/: __init__.py  models.py  persona.py  safety.py  voice_presets.py
src/voiceclone/infrastructure/: __init__.py  anthropic_client.py  elevenlabs_client.py  logging.py
src/voiceclone/services/: __init__.py  conversation.py  speech_synthesis.py  voice_cloning.py
tests/: conftest.py  test_anthropic_client.py  test_conversation.py  test_elevenlabs_client.py  test_models.py  test_persona.py  test_safety.py  test_settings.py  test_speech_synthesis.py  test_streamlit_app.py  test_voice_cloning.py  test_voice_presets.py
