[project]
name = "voiceclone"
version = "0.1.0"
description = "Memorial conversacional con voz clonada (ElevenLabs IVC + Claude). Proyecto 'Alexander'."
requires-python = ">=3.11"
readme = "README.md"

# ---------------------------------------------------------------------
# Ruff: linter + formateador
# ---------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (orden de imports)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # reglas propias de ruff
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["voiceclone"]

[tool.ruff.lint.per-file-ignores]
# Los scripts ajustan sys.path antes de importar el paquete (entrypoints).
"scripts/*" = ["E402"]

# ---------------------------------------------------------------------
# Mypy: type checking estricto
# ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"
explicit_package_bases = true

# Algunas dependencias no traen stubs completos.
[[tool.mypy.overrides]]
module = ["elevenlabs.*", "returns.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: pruebas que requieren API keys reales (se omiten por defecto)",
]

# ---------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------
[tool.coverage.run]
source = ["src/voiceclone"]
omit = ["*/cli/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
